fix(native): native maven plugin