@@ -40,6 +40,8 @@
     </scm>
     <properties>
         <java.version>25</java.version>
+        <maven.compiler.source>25</maven.compiler.source>
+        <maven.compiler.target>25</maven.compiler.target>
         <spring-shell.version>3.4.1</spring-shell.version>
         <spring-dotenv.version>4.0.0</spring-dotenv.version>
         <semver4j.version>6.0.0</semver4j.version>
@@ -113,6 +115,24 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.graalvm.buildtools</groupId>
+                <artifactId>native-maven-plugin</artifactId>
+                <version>0.11.3</version>
+                <configuration>
+                    <buildArgs>
+                        <buildArg>--enable-native-access=ALL-UNNAMED</buildArg>
+                        <buildArg>--gc=G1</buildArg>
+                        <buildArg>--future-defaults=all</buildArg>
+                        <buildArg>-J-Xmx8G</buildArg>
+                        <buildArg>-march=native</buildArg>
+                        <buildArg>--strict-image-heap</buildArg>
+                        <buildArg>--pgo</buildArg>
+                        <buildArg>--quick-build</buildArg>
+                        <buildArg>--enable-sbom</buildArg>
+                    </buildArgs>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.jsonschema2pojo</groupId>
                 <artifactId>jsonschema2pojo-maven-plugin</artifactId>
